--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1 style="background-color:Green;">Hello From Sudipta, Training for Azure</h1>
+<h1 style="background-color:Green;">Hello From Sud, Training for Azure</h1>
  style="background-color:Green;" <b> See you tomorrow <b>
 <p>This is a <b>Production</b> App.</p>
 
